CHANGES.txt - 2007-02-10
------------------------

CHANGES IN CUPS V1.3

	- Documentation updates (STR #2131)
	- The web interface "Add This Printer" button now allows you
	  to change the printer name, description,  and location
	  (STR #1646)
	- Added support for Mac OS X authorization services
	  (STR #2206)
	- Added support for driver-specific pre-filters (STR #2108)
	- Added a new side-channel API for drivers and backends
	  for basic device control and information queries (STR
	  #1898)
	- The scheduler now uses poll(), epoll(), or /dev/kqueue
	  instead of select() when possible (STR #1261)
	- Added new cupsArrayGetIndex() and cupsArrayGetInsert()
	  functions to get the current index and insertion
	  positions of an array.
	- Added a new --with-max-copies configure option (STR
	  #2090)
	- Added new cupsRemoveDest() and cupsSetDefaultDest()
	  functions.
	- Added support for cupsPJLCharset attribute in PPD files
	  which specifies the character set that is used in PJL
	  strings (STR #1969)
	- Moved the definition of the (private) _http_s structure
	  to http-private.h; code that directly accesses the
	  http_t members will no longer compile!
	- Added support for setting the document-format-default
	  attribute on a per-printer basis.
	- Added support for IntelliBar label printers.