@@ -19,6 +19,8 @@ up to 1024 bytes in length.</P>
 
 <P>This is some text for the first anchor.</P>
 
+<P>John asked Mary to the dance.</P>
+
 
 <H1><A NAME="THIRD">This is the Third Anchor</A></H1>
 
